fixed about styling on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -7,16 +7,16 @@
   align-items: center;
 }
 .about-section{
-  width: 40%;
+  width: 90%;
   /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center; */
 }
-.about-section h1 {
+.section h1 {
   font-family: 'Krona One', sans-serif;
   font-size: 3rem;
 }
-.about-section p {
+.section p {
   font-size: 1.556rem;
 }
